added Coursera course

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -229,13 +229,14 @@ Greenhalgh, S. P., **Staudt Willet**, K. B., Rosenberg, J. M., & Koehler, M. J. 
 * *American Journal of Education* (with Dr. Jeffrey Carpenter, faculty reviewer) \hfill 2019
 * *Learning, Media and Technology* (with Dr. Christine Greenhow, faculty reviewer) \hfill 2016
 
-## Service to Department
+## Ad Hoc Service to Individuals
 
+* *Copy Editing for National Science Foundation (NSF) Grant Proposal: "Understanding the Development of Interest in Computer Science: An Experience Sampling Approach"*, Dr. Joshua Rosenberg, University of Tennessee, Knoxville \hfill 2019
 * *Practicum Committee Member*, Sarah Galvin, Michigan State University \hfill 2018-2019
 * *Social Network Analysis*, Katie Schenkel, Michigan State University \hfill 2018
 * *Content Analysis for Doctoral Dissertation*, Colin Terry, Michigan State University \hfill 2018  
 
-## Service to Profession
+## Service in Professional Organizations
 
 Association for Educational Communications & Technology (AECT)
 
@@ -359,6 +360,9 @@ Bucknell University, College of Arts & Sciences \hfill Lewisburg PA
 Bucknell University, College of Arts & Sciences \hfill Lewisburg PA
 
 # Further Training
+
+*Exploratory Data Analysis* \hfill 2019    
+Certificate – Johns Hopkins University \hfill Coursera.org
 
 *Doctoral Colloquium* \hfill 2018  
 Association of Internet Researchers (AoIR) \hfill Montreal QC
