updated after AECT election

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -243,20 +243,23 @@ Greenhalgh, S. P., **Staudt Willet**, K. B., Rosenberg, J. M., & Koehler, M. J. 
 
 Association for Educational Communications & Technology (AECT)
 
+* *Communications Officer*, Research & Theory Division \hfill 2020-2021
 * *Secretary*, Research & Theory Division \hfill 2019-2020
-* *Conference Proposal Reviewer*, Research & Theory Division \hfill 2019
+* *Conference Proposal Reviewer*, Research & Theory Division \hfill 2019-2020
 * *Graduate Student Representative*, Research & Theory Division \hfill 2018-2019
 * *Webinar Team Leader*, Graduate Student Association Division \hfill 2018-2019
-
-American Educational Research Association (AERA)
-
-* *Session Presider/Chair*, Annual Meeting (New York NY) \hfill 2018
 
 Society for Information Technology and Teacher Education (SITE)
 
 * *Co-Chair*, Social Media SIG \hfill 2019-2021
+* *Conference Proposal Reviewer*, Social Media SIG \hfill 2020
 * *Graduate Student Intern*, Social Media SIG \hfill 2018-2019
-* *Session Presider/Chair* \hfill 2018-2019
+* *Session Presider/Chair* \hfill 2018-2020
+
+
+American Educational Research Association (AERA)
+
+* *Session Presider/Chair*, Annual Meeting (New York NY) \hfill 2018
 
 Passion Talks Conference (Google HQ, Mountain View CA)
 
