updated JRTE pub

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -22,7 +22,7 @@ web: bretsw.com
 # phone: ""
 updated: yes
 
-keywords: networked learning, information science, teacher education, social media, educational technology
+keywords: teacher networks, social media, educational technology
 
 fontfamily: mathpazo
 fontfamilyoptions: sc, osf
@@ -94,9 +94,9 @@ Bucknell University \hfill Lewisburg PA
 
 ## Peer-Reviewed Journal Articles
 
-**Staudt Willet**, K. B., & Carpenter, J. P. (in press). Teachers on Reddit? Exploring contributions and interactions in four teaching-related subreddits. *Journal of Research on Technology in Education*. https://doi.org/10.1080/15391523.2020.1722978
-
 Greenhalgh, S. P., Rosenberg, J. M., **Staudt Willet**, K. B., Koehler, M. J., & Akcaoglu, M. (2020). Identifying multiple learning spaces within a single teacher-focused Twitter hashtag. *Computers and Education*. https://doi.org/10.1016/j.compedu.2020.103809
+
+**Staudt Willet**, K. B., & Carpenter, J. P. (2020). Teachers on Reddit? Exploring contributions and interactions in four teaching-related subreddits. *Journal of Research on Technology in Education*. https://doi.org/10.1080/15391523.2020.1722978
 
 Carpenter, J. P., **Staudt Willet**, K. B., Koehler, M. J., & Greenhalgh, S. P. (2019). Spam and educators’ Twitter use: Methodological considerations and challenges. *TechTrends*. https://doi.org/10.1007/s11528-019-00466-3
 
@@ -247,7 +247,7 @@ Association for Educational Communications & Technology (AECT)
 * *Secretary*, Research & Theory Division \hfill 2019-2020
 * *Conference Proposal Reviewer*, Research & Theory Division \hfill 2019-2020
 * *Graduate Student Representative*, Research & Theory Division \hfill 2018-2019
-* *Webinar Team Leader*, Graduate Student Association Division \hfill 2018-2019
+* *Webinar Team Leader*, Graduate Student Association \hfill 2018-2019
 
 Society for Information Technology and Teacher Education (SITE)
 
