added link to JTATE article

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -106,7 +106,7 @@ Greenhow, C. M., Galvin, S., & **Staudt Willet**, K. B. (2019). What should be t
 
 Greenhow, C. M., Gleason, B., & **Staudt Willet**, K. B. (2019). Social scholarship revisited: Changing scholarly practices in the age of social media. *British Journal of Educational Technology, 50*, 987-1004. https://doi.org/10.1111/bjet.12772
 
-Krutka, D. G., Heath, M. K., & **Staudt Willet**, K. B. (2019). Foregrounding technoethics: Toward critical perspectives in technology and teacher education. *Journal of Technology and Teacher Education, 27*(4), 549-568.
+Krutka, D. G., Heath, M. K., & **Staudt Willet**, K. B. (2019). Foregrounding technoethics: Toward critical perspectives in technology and teacher education. *Journal of Technology and Teacher Education, 27*(4), 555-574. Retrieved from http://learntechlib.org/p/208235/
 
 **Staudt Willet**, K. B. (2019). Revisiting how and why educators use Twitter: Tweet types and purposes in #Edchat. *Journal of Research on Technology in Education, 51*, 273-289. https://doi.org/10.1080/15391523.2019.1611507
 
