added teaching section

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -158,7 +158,7 @@ Rosenberg, J., Akcaoglu, M., **Staudt Willet**, K. B., Greenhalgh, S., & Koehler
 
 ## Peer-Reviewed Conference Workshops
 
-**Staudt Willet**, K. B., Greenhalgh, S. P., & Rosenberg, J. M. (2019, October). *Online data and open source tools: Analyzing educational Internet data using R.* Workshop facilitated at the Association for Educational Communications and Technology (AECT) International Convention 2019. Las Vegas, NV. Available from https://github.com/bretsw/aect19-workshop/
+**Staudt Willet**, K. B., Greenhalgh, S. P., & Rosenberg, J. M. (2019, October). *Online data and open source tools: Analyzing educational Internet data using R.* Workshop facilitated at the Association for Educational Communications and Technology (AECT) International Convention 2019. Las Vegas, NV. Available from https://bretsw.github.io/aect19-workshop/
 
 ## Peer-Reviewed Conference Presentations
 
@@ -206,6 +206,8 @@ Greenhalgh, S. P., **Staudt Willet**, K. B., Rosenberg, J. M., & Koehler, M. J. 
 
 ## Invited Talks
 
+**Staudt Willet**, K. B., Rosenberg, J. M., &  Greenhalgh, S. P. (2020, March). *R u ready 4 R? Introduction to analyzing educational Internet data using R.* Workshop facilitated for the Students, Social Media & Schools research group at Florida State University. Available from https://bretsw.github.io/fsu-workshop/
+
 **Staudt Willet**, K. B., & Bork, W. (2019, December). *Electronic assessment*. Talk for Master of Arts in Educational Technology (MAET) instructor huddle at Michigan State University: East Lansing, MI.
 
 **Staudt Willet**, K. B. (2019, November). *Content, conversation, & context: How educators talk to each other in Twitter #Edchat*. Talk for EPET PhD program brownbag seminar at Michigan State University: East Lansing, MI.
@@ -224,6 +226,22 @@ Greenhalgh, S. P., **Staudt Willet**, K. B., Rosenberg, J. M., & Koehler, M. J. 
 
 **Staudt Willet**, K. B. (2014, March). *What games say*. Guest lecture for an undergraduate course in Film, Media, & Teacher Education. Millersville University: Millersville, PA.
 
+# Teaching
+
+## Courses
+
+* Teaching & Learning with Technology (Undergraduate) \hfill 2017-present
+* Learning Technology through Design (Master’s) \hfill 2018-present
+* Electronic Assessment for Teaching and Learning (Master’s) \hfill 2018-present
+* Teaching Students Online (Master’s) \hfill 2017
+
+## Mentoring/Advising
+
+* *Copy Editing for National Science Foundation (NSF) Grant Proposal*, Dr. Joshua Rosenberg, University of Tennessee, Knoxville \hfill 2019
+* *Practicum Committee Member*, Sarah Galvin, Michigan State University \hfill 2018-2019
+* *Social Network Analysis*, Katie Schenkel, Michigan State University \hfill 2018
+* *Content Analysis for Doctoral Dissertation*, Colin Terry, Michigan State University \hfill 2018  
+
 # Service
 
 ## Journal Article Reviews
@@ -231,13 +249,6 @@ Greenhalgh, S. P., **Staudt Willet**, K. B., Rosenberg, J. M., & Koehler, M. J. 
 * *Internet and Higher Education* \hfill 2019
 * *American Journal of Education* (with Dr. Jeffrey Carpenter, faculty reviewer) \hfill 2019
 * *Learning, Media and Technology* (with Dr. Christine Greenhow, faculty reviewer) \hfill 2016
-
-## Ad Hoc Service to Individuals
-
-* *Copy Editing for National Science Foundation (NSF) Grant Proposal: "Understanding the Development of Interest in Computer Science: An Experience Sampling Approach"*, Dr. Joshua Rosenberg, University of Tennessee, Knoxville \hfill 2019
-* *Practicum Committee Member*, Sarah Galvin, Michigan State University \hfill 2018-2019
-* *Social Network Analysis*, Katie Schenkel, Michigan State University \hfill 2018
-* *Content Analysis for Doctoral Dissertation*, Colin Terry, Michigan State University \hfill 2018  
 
 ## Service in Professional Organizations
 
@@ -255,11 +266,6 @@ Society for Information Technology and Teacher Education (SITE)
 * *Conference Proposal Reviewer*, Social Media SIG \hfill 2020
 * *Graduate Student Intern*, Social Media SIG \hfill 2018-2019
 * *Session Presider/Chair* \hfill 2018-2020
-
-
-American Educational Research Association (AERA)
-
-* *Session Presider/Chair*, Annual Meeting (New York NY) \hfill 2018
 
 Passion Talks Conference (Google HQ, Mountain View CA)
 
@@ -284,16 +290,13 @@ North American Simulation and Game Association (NASAGA)
 Michigan State University, College of Education \hfill East Lansing MI  
 Department of Counseling, Educational Psychology, & Special Education
 
-* Taught CEP 416 - Teaching & Learning with Technology (Undergraduate)
-* Taught CEP 813 - Electronic Assessment for Teaching and Learning (Master’s)
-* Taught CEP 817 - Learning Technology through Design (Master’s)
-* Taught CEP 820 - Teaching Students Online (Master’s)
+* Taught courses at the Master's and undergraduate levels
 
 *Course Writer* \hfill 2019  
 Concordia University, College of Education \hfill Portland, OR  
 Educational Technology and Learning Design program
 
-* Wrote EDET 509 - The Evolving Landscape of Educational Technology (Master's)
+* The Evolving Landscape of Educational Technology (Master's)
 
 *Founding National Director* – Ministry in Digital Spaces \hfill 2014-2017  
 InterVarsity Christian Fellowship/USA \hfill United States
