further updated teaching section

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -156,10 +156,6 @@ Rosenberg, J., Akcaoglu, M., **Staudt Willet**, K. B., Greenhalgh, S., & Koehler
 
 **Staudt Willet**, K. B., Koehler, M. J., & Greenhalgh, S. P. (2017, March). A tweet by any other frame: Three approaches to studying educator interactions on Twitter. In P. Resta & S. Smith (Eds.), *Proceedings of Society for Information Technology & Teacher Education (SITE) International Conference 2017* (pp. 1823-1830). Austin, TX: Association for the Advancement of Computing in Education (AACE). Retrieved from https://www.learntechlib.org/p/177469/
 
-## Peer-Reviewed Conference Workshops
-
-**Staudt Willet**, K. B., Greenhalgh, S. P., & Rosenberg, J. M. (2019, October). *Online data and open source tools: Analyzing educational Internet data using R.* Workshop facilitated at the Association for Educational Communications and Technology (AECT) International Convention 2019. Las Vegas, NV. Available from https://bretsw.github.io/aect19-workshop/
-
 ## Peer-Reviewed Conference Presentations
 
 Rosenberg, J. M., Rutherford, T., & **Staudt Willet**, K. B. (2020, April). *Which birds fill the branches of the AERA Twitter tree? Twitter networks around #AERA19*. Paper to be presented at the American Educational Research Association (AERA) Annual Meeting 2020. San Francisco, CA.
@@ -204,13 +200,24 @@ Greenhalgh, S. P., **Staudt Willet**, K. B., Rosenberg, J. M., & Koehler, M. J. 
 
 **Willet**, K. B. (2001, February). *The shortest closed path on an arithmetic surface.* Paper presented at Moravian College Student Mathematics Conference 2001. Bethlehem, PA.
 
-## Invited Talks
+# Teaching
+
+## Courses
+
+* Instructor, *Teaching & Learning with Technology* (Undergraduate, online) \hfill 2017-present
+* Instructor, *Learning Technology through Design* (Master’s, online) \hfill 2018-present
+* Instructor, *Electronic Assessment for Teaching and Learning* (Master’s, online) \hfill 2018-present
+* Instructor, *Teaching Students Online* (Master’s, online) \hfill 2017
+
+## Instructional Activities & Workshops 
 
 **Staudt Willet**, K. B., Rosenberg, J. M., &  Greenhalgh, S. P. (2020, March). *R u ready 4 R? Introduction to analyzing educational Internet data using R.* Workshop facilitated for the Students, Social Media & Schools research group at Florida State University. Available from https://bretsw.github.io/fsu-workshop/
 
 **Staudt Willet**, K. B., & Bork, W. (2019, December). *Electronic assessment*. Talk for Master of Arts in Educational Technology (MAET) instructor huddle at Michigan State University: East Lansing, MI.
 
 **Staudt Willet**, K. B. (2019, November). *Content, conversation, & context: How educators talk to each other in Twitter #Edchat*. Talk for EPET PhD program brownbag seminar at Michigan State University: East Lansing, MI.
+
+**Staudt Willet**, K. B., Greenhalgh, S. P., & Rosenberg, J. M. (2019, October). *Online data and open source tools: Analyzing educational Internet data using R.* Workshop facilitated at the Association for Educational Communications and Technology (AECT) International Convention 2019. Las Vegas, NV. Available from https://bretsw.github.io/aect19-workshop/
 
 **Staudt Willet**, K. B. (2019, September). *Insights for academic publishing*. Guest lecture for an EPET doctoral course, CEP 956: Mind, Media and Learning. Michigan State University: East Lansing, MI.
 
@@ -220,27 +227,18 @@ Greenhalgh, S. P., **Staudt Willet**, K. B., Rosenberg, J. M., & Koehler, M. J. 
 
 **Staudt Willet**, K. B. (2017, November). *Once more unto the practicum, dear friends: Research lessons from studying social interactions on social media*. Talk for EPET PhD program brownbag seminar at Michigan State University: East Lansing, MI. 
 
-**Staudt Willet**, K. B. (2016, August). *How did we get here?* Keynote address at Passion Talks Conference 2016. Fremont, CA.
-
 **Staudt Willet**, K. B. (2015, September). *Patterns of online communities*. Webinar presented for Indigitous Sessions. Online.
 
 **Staudt Willet**, K. B. (2014, March). *What games say*. Guest lecture for an undergraduate course in Film, Media, & Teacher Education. Millersville University: Millersville, PA.
 
-# Teaching
+## Mentoring and Advising
 
-## Courses
-
-* Teaching & Learning with Technology (Undergraduate) \hfill 2017-present
-* Learning Technology through Design (Master’s) \hfill 2018-present
-* Electronic Assessment for Teaching and Learning (Master’s) \hfill 2018-present
-* Teaching Students Online (Master’s) \hfill 2017
-
-## Mentoring/Advising
-
-* *Copy Editing for National Science Foundation (NSF) Grant Proposal*, Dr. Joshua Rosenberg, University of Tennessee, Knoxville \hfill 2019
-* *Practicum Committee Member*, Sarah Galvin, Michigan State University \hfill 2018-2019
-* *Social Network Analysis*, Katie Schenkel, Michigan State University \hfill 2018
-* *Content Analysis for Doctoral Dissertation*, Colin Terry, Michigan State University \hfill 2018  
+* Graduate mentor, *Master's course instruction* (William Bork, MSU) \hfill 2018-2019
+* Peer reviewer, *National Science Foundation (NSF) Grant Proposal* (Dr. Joshua Rosenberg, University of Tennessee, Knoxville) \hfill 2019
+* Doctoral student member, *Research Apprenticeship Practicum Committee* (Sarah Galvin, MSU) \hfill 2018-2019
+* Graduate mentor, *Undergraduate course instruction* (Matthew Drazin, MSU) \hfill 2018-2019
+* Data analyst, *Social network analysis for doctoral project* (Katie Schenkel, MSU) \hfill 2018
+* Data analyst, *Content analysis for doctoral dissertation* (Colin Terry, MSU) \hfill 2018
 
 # Service
 
